Finally fixed the alignment of the intro img and text

--- a/bootcamp/pizza_camp/menu_style.css
+++ b/bootcamp/pizza_camp/menu_style.css
@@ -1,11 +1,18 @@
 body {
 	background-image: url("PIZZA.jpg");
+	background-attachment: fixed;
 	font-family: Garamond, serif;
 }
 
-h3 {
+p {
 	font-size: 1.25em;
+	text-align: justify;
+}
+
+h3 {
+	font-size: 1.75em;
 	border-bottom: 2px solid black;
+	margin-bottom: 10px;
 }
 
 
@@ -16,15 +23,15 @@ h3 {
 	display: block;
 	width: 35%;
 	margin: 0px auto 20px auto;
-	border-radius: 10%;
+	border-radius: 10px;
 }
 
 #menu {
 	border: 2px solid black;
 	background-color: #f5efcf;
-	padding: 20px 50px 10px 50px;
+	padding: 20px 50px 20px 50px;
 	width: 35%;
 	display: block;
 	margin:0px auto 50px auto;
-	border-radius: 10%;
+	border-radius: 10px;
 }
