--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,6 @@ ul.nav-menu li a {
 	height: 45%;
 	width: 	45%;
 	border-radius: 100%;
-	border: 2px solid black
 	float: left;
 	display: block-inline;
 }
@@ -84,9 +83,9 @@ ul.nav-menu li a {
 #intro-text {
 	height: 45%;
 	width: 45%;
-	display: block-inline;
-	float: right;
 	margin-left: 10px;
+	float: right;
+	display: block-inline;
 }
 
 .review-img {
